fix spacing on about page

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -18,6 +18,7 @@
 .about-container h1 {
   font-size: 3rem;
   font-family: 'Space Mono', monospace;
+  margin-bottom: 5vw;
 }
 
 .about-container h2 {
@@ -36,7 +37,7 @@
   justify-content: flex-end;
   align-items: flex-end;
   flex-direction: column;
-  /* margin-bottom: 40px; */
+  margin-top: -10vh;
   padding-right: 60vw;
   width: 50%;
   opacity: 0;
@@ -46,8 +47,6 @@
 
 .hidden-left p {
   margin: 0;
-  /* text-align: right; */
-  /* border-top: 1px solid green; */
   width: 60%;
 }
 
@@ -62,7 +61,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
-  /* margin-bottom: 40px; */
+  margin-top: -25vh;
   padding-left: 60vw;
   width: 50%;
   opacity: 0;
